# yolov5-deployment

./: CMakeLists.txt  README.md  detector.cpp  detector.hpp  main.cpp  video_player.cpp  video_player.hpp
